[gd_scene load_steps=18 format=3 uid="uid://dktpjmfgyxawi"]

[ext_resource type="Script" uid="uid://bv0avcr5x60ea" path="res://scenes/trf/scripts/hud.gd" id="1_umi3j"]
[ext_resource type="FontFile" uid="uid://cxw0w38m3cye4" path="res://assets/fonts/vcr.ttf" id="2_6y8w7"]
[ext_resource type="Texture2D" uid="uid://cdix5wfmrf7kx" path="res://assets/graphics/ui/heart.png" id="3_wplot"]

[sub_resource type="Gradient" id="Gradient_mtv60"]
colors = PackedColorArray(0, 0, 0, 0, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_owe4g"]
gradient = SubResource("Gradient_mtv60")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.83871, 0.241935)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_q0sd7"]
texture = SubResource("GradientTexture2D_owe4g")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rm38d"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="Gradient" id="Gradient_c28ee"]
colors = PackedColorArray(0.158472, 0.158472, 0.158472, 1, 0.556953, 0.556953, 0.556953, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_n1hpl"]
gradient = SubResource("Gradient_c28ee")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_16shb"]
texture = SubResource("GradientTexture2D_n1hpl")

[sub_resource type="Gradient" id="Gradient_khuag"]
colors = PackedColorArray(0.419813, 0.419813, 0.419813, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_vgfm8"]
gradient = SubResource("Gradient_khuag")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_agrdq"]
texture = SubResource("GradientTexture2D_vgfm8")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aaokm"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bvgn1"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l0drw"]
bg_color = Color(0.6, 0.6, 0.6, 0.705882)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xn1wd"]
bg_color = Color(0, 0, 0, 1)

[node name="hud" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
script = ExtResource("1_umi3j")

[node name="Blackout" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
theme_override_styles/panel = SubResource("StyleBoxTexture_q0sd7")

[node name="Stamina" type="NinePatchRect" parent="."]
layout_mode = 0
offset_top = 664.0
offset_right = 384.0
offset_bottom = 720.0

[node name="Panel" type="Panel" parent="Stamina"]
layout_mode = 0
offset_right = 384.0
offset_bottom = 56.0
theme_override_styles/panel = SubResource("StyleBoxFlat_rm38d")

[node name="stamBar" type="ProgressBar" parent="Stamina"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 376.0
offset_bottom = 48.0
theme_override_styles/background = SubResource("StyleBoxTexture_16shb")
theme_override_styles/fill = SubResource("StyleBoxTexture_agrdq")
step = 0.001
value = 100.0
show_percentage = false

[node name="stamTxt" type="Label" parent="Stamina"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 376.0
offset_bottom = 48.0
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_6y8w7")
theme_override_font_sizes/font_size = 24
text = "Stamina: 100/100"
vertical_alignment = 1

[node name="health" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = 152.0
offset_top = 584.0
offset_right = 384.0
offset_bottom = 672.0

[node name="bg" type="Panel" parent="health"]
layout_mode = 0
offset_right = 232.0
offset_bottom = 88.0
theme_override_styles/panel = SubResource("StyleBoxFlat_aaokm")

[node name="top" type="Panel" parent="health"]
layout_mode = 0
offset_left = 8.0
offset_top = 80.0
offset_right = 80.0
offset_bottom = 296.0
rotation = -1.5708
theme_override_styles/panel = SubResource("StyleBoxTexture_16shb")

[node name="heart1" type="Sprite2D" parent="health"]
position = Vector2(44, 44)
scale = Vector2(0.72, 0.72)
texture = ExtResource("3_wplot")

[node name="heart2" type="Sprite2D" parent="health"]
position = Vector2(116, 44)
scale = Vector2(0.72, 0.72)
texture = ExtResource("3_wplot")

[node name="heart3" type="Sprite2D" parent="health"]
position = Vector2(188, 44)
scale = Vector2(0.72, 0.72)
texture = ExtResource("3_wplot")

[node name="money" type="NinePatchRect" parent="."]
layout_mode = 0
offset_top = 584.0
offset_right = 152.0
offset_bottom = 672.0

[node name="bg" type="Panel" parent="money"]
layout_mode = 0
offset_right = 152.0
offset_bottom = 88.0
theme_override_styles/panel = SubResource("StyleBoxFlat_aaokm")

[node name="top" type="Panel" parent="money"]
layout_mode = 0
offset_left = 8.0
offset_top = 80.0
offset_right = 80.0
offset_bottom = 224.0
rotation = -1.5708
theme_override_styles/panel = SubResource("StyleBoxTexture_16shb")

[node name="text" type="Label" parent="money"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 152.0
offset_bottom = 80.0
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_6y8w7")
theme_override_font_sizes/font_size = 32
text = "$99999+"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ActiveAbility" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = 392.0
offset_top = 584.0
offset_right = 528.0
offset_bottom = 720.0

[node name="bg" type="Panel" parent="ActiveAbility"]
layout_mode = 0
offset_right = 136.0
offset_bottom = 136.0
theme_override_styles/panel = SubResource("StyleBoxFlat_aaokm")

[node name="top" type="Panel" parent="ActiveAbility"]
layout_mode = 0
offset_left = 8.0
offset_top = 128.0
offset_right = 128.0
offset_bottom = 248.0
rotation = -1.57079
theme_override_styles/panel = SubResource("StyleBoxTexture_16shb")

[node name="cooldownBar" type="ProgressBar" parent="ActiveAbility"]
layout_mode = 0
offset_left = 8.0
offset_top = 128.0
offset_right = 128.0
offset_bottom = 248.0
rotation = -1.57079
theme_override_styles/background = SubResource("StyleBoxFlat_bvgn1")
theme_override_styles/fill = SubResource("StyleBoxFlat_l0drw")
value = 50.0
show_percentage = false

[node name="cooldown" type="Label" parent="ActiveAbility"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 128.0
offset_bottom = 128.0
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_6y8w7")
theme_override_font_sizes/font_size = 64
text = "60"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Debug" type="NinePatchRect" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 192.0

[node name="toon" type="LineEdit" parent="Debug"]
layout_mode = 0
offset_right = 448.0
offset_bottom = 64.0
placeholder_text = "Insert a toon name."

[node name="Floor" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = 384.0
offset_right = 896.0
offset_bottom = 128.0

[node name="floor_number" type="Label" parent="Floor"]
layout_mode = 0
offset_right = 512.0
offset_bottom = 32.0
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_6y8w7")
theme_override_font_sizes/font_size = 32
text = "FLOOR 1"
horizontal_alignment = 1

[node name="machines" type="Label" parent="Floor"]
layout_mode = 0
offset_top = 32.0
offset_right = 512.0
offset_bottom = 64.0
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_6y8w7")
theme_override_font_sizes/font_size = 24
text = "0/2 Machines"
horizontal_alignment = 1

[node name="Roland_Happiness" type="NinePatchRect" parent="."]
layout_mode = 0
offset_top = 64.0
offset_right = 128.0
offset_bottom = 512.0

[node name="Panel" type="Panel" parent="Roland_Happiness"]
layout_mode = 0
offset_top = 16.0
offset_right = 80.0
offset_bottom = 440.0
theme_override_styles/panel = SubResource("StyleBoxFlat_rm38d")

[node name="Panel2" type="Panel" parent="Roland_Happiness"]
layout_mode = 0
offset_left = 8.0
offset_top = 432.0
offset_right = 416.0
offset_bottom = 496.0
rotation = -1.5708
theme_override_styles/panel = SubResource("StyleBoxTexture_16shb")

[node name="happinessBar" type="ProgressBar" parent="Roland_Happiness"]
layout_mode = 0
offset_left = 16.0
offset_top = 400.0
offset_right = 384.0
offset_bottom = 448.0
rotation = -1.5708
theme_override_styles/background = SubResource("StyleBoxFlat_xn1wd")
theme_override_styles/fill = SubResource("StyleBoxTexture_agrdq")
step = 0.001
value = 50.0
show_percentage = false

[node name="happinessText" type="Label" parent="Roland_Happiness"]
layout_mode = 0
offset_left = 8.0
offset_top = 392.0
offset_right = 72.0
offset_bottom = 432.0
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_6y8w7")
theme_override_font_sizes/font_size = 24
text = "50%"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="text_submitted" from="Debug/toon" to="." method="toon_name_debug"]
